--- a/src/BlazorBindings.Maui/BlazorBindings.Maui.csproj
+++ b/src/BlazorBindings.Maui/BlazorBindings.Maui.csproj
@@ -19,7 +19,7 @@
 	<ItemGroup>
 		<!--We cannot use Microsoft.NET.Sdk.Razor because of this bug https://github.com/dotnet/maui/issues/3536.
 		Therefore we reference WebView.Maui package directly, but excluding .targets files.-->
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="6.0.408" IncludeAssets="compile;runtime" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" IncludeAssets="compile;runtime" />
 	</ItemGroup>
 
 	<ItemGroup>
