--- a/src/BlazorBindings.Core/BlazorBindings.Core.csproj
+++ b/src/BlazorBindings.Core/BlazorBindings.Core.csproj
@@ -11,6 +11,11 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.9" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+		
+		<PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
