--- a/src/BlazorBindings.Maui.SkiaSharp/BlazorBindings.Maui.SkiaSharp.csproj
+++ b/src/BlazorBindings.Maui.SkiaSharp/BlazorBindings.Maui.SkiaSharp.csproj
@@ -18,6 +18,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.2" />
+		
+		<PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
