--- a/src/BlazorBindings.Maui/BlazorBindings.Maui.csproj
+++ b/src/BlazorBindings.Maui/BlazorBindings.Maui.csproj
@@ -24,6 +24,11 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\BlazorBindings.Core\BlazorBindings.Core.csproj" />
+		
+		<PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
