--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,19 +15,12 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0        
-    - name: Install .NET 6.0.400
+    - name: Install .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.400'
-        include-prerelease: true
+        dotnet-version: '7.0.x'
     - name: Install MAUI
-      run: |
-        dotnet workload install maui `
-          --from-rollback-file https://maui.blob.core.windows.net/metadata/rollbacks/6.0.486.json `
-          --source https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-a21b9a2d/nuget/v3/index.json `
-          --source https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-52e9452f-3/nuget/v3/index.json `
-          --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet6/nuget/v3/index.json `
-          --source https://api.nuget.org/v3/index.json
+      run: dotnet workload install maui
     - name: Restore dependencies
       run: dotnet restore BlazorBindings.Maui.sln
     - name: Run tests
