--- a/src/BlazorBindings.Core/BlazorBindings.Core.csproj
+++ b/src/BlazorBindings.Core/BlazorBindings.Core.csproj
@@ -5,6 +5,7 @@
 		<Title>Blazor Bindings Core Runtime</Title>
 		<Description>Common logic for using Blazor to target native renderers. For mobile app projects for Android and iOS use the BlazorBindings.Maui package.</Description>
 		<PackageTags>blazor;blazorbindings</PackageTags>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
