--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: .NET
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'v[0-9].**' ]
   pull_request:
     branches: [ main, 'v[0-9].**' ]
 
