--- a/src/BlazorBindings.Maui.SkiaSharp/BlazorBindings.Maui.SkiaSharp.csproj
+++ b/src/BlazorBindings.Maui.SkiaSharp/BlazorBindings.Maui.SkiaSharp.csproj
@@ -16,7 +16,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.4-preview.89" />
 		
 		<PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
@@ -26,10 +26,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\BlazorBindings.Maui\BlazorBindings.Maui.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.133" />
 	</ItemGroup>
 
 </Project>
